package app.Machine;

public class AssemblyTable extends Machine{
}
