package app.Machine;

public class Lathe extends Machine{
}
