package app.Machine;

public class Machine {
    private int healthPoints;
    private int progress;
    private int pricec;
    public boolean isOn;

    public void getPrive()
    {

    }

    public void payForRepair()
    {

    }

    public void repair()
    {

    }

    public void isProductDone()
    {

    }

    public void createNewProduct()
    {

    }
}
