package app.Machine;

public class WeldingMachine extends Machine{
}
