package app;
import app.Utils.PerlinNoise;


public class Market {
    private double priceBuy;
    private double priceSell;

    public void sell()
    {

    }

    public void buy()
    {

    }
}
