package app.Worker;

public class Fitter extends Worker{
    private double modifier;
}
