package app.Worker;

public class Turner extends Worker{
    private double modifier;
}
