package app.Worker;

public class Welder extends Worker{
    private double modifier;
}
