package app.Worker;

public class Worker {
    private int x;
    private int y;
    private int salary;
    private int sanity;
    private int efficiency;
    private boolean isWorking;
    private int experience;

    public void draw()
    {

    }

    public void update()
    {

    }
}
